--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   text-align: center;
-  background-color: #000 !important;
-
+  background-color: rgb(241, 241, 241) !important;
 }
 
 .App-logo {
@@ -18,6 +17,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
   padding-bottom: 100px;
+}
+
+.hint {
+  color: black;
 }
 
 .tableDiv {
@@ -49,7 +52,7 @@
 
 #myTable {
   /* background-color: #d8315b; */
-  background-color: #fff;
+  background-color: rgb(207, 198, 198);
   color: #d8315b;
   /* border-color: black; */
   border-radius: 10px;
@@ -74,8 +77,6 @@ table-dark.table-hover tbody tr:hover {
   background-color: #d8315b !important;
   border-color: #d8315b !important;
 }
-
-
 
 .black {
   color: white;
