--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   height: 40vmin;
 }
 
+.collect-info {
+    color: black;
+}
+
 .App-header {
   /* background-image: linear-gradient(rgb(240, 240, 240), rgb(255, 255, 255)); */
   min-height: 100vh;
@@ -24,8 +28,15 @@
 }
 
 .tableDiv {
-  padding: 100px;
+  padding: 10%;
   width: 80%;
+}
+
+@media only screen and (max-width: 600px) {
+  .tableDiv {
+    padding: 5%;
+    width: 85%;
+  }
 }
 
 .p-20 {
